--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <title>Wayke.up!</title>
 <style type="text/css">
-	background_color = orange;
+body{	
+	background-color = orange;
+	text-color = black;
+}
 
 </style>
 
