--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <title>Wayke.up!</title>
 <style type="text/css">
-body{	
+p{	
 	background-color = orange;
-	text-color = black;
+	color = black;
 }
 
 </style>
