--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <title>Wayke.up!</title>
 <style type="text/css">
 p{	
-	background-color = orange;
-	color = black;
+	background-color: orange;
+	color: black;
+}
+title{
+	text-align: center;
 }
 
 </style>
