--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <title>Wayke.up!</title>
 <style type="text/css">
+body{
+	background-color: #fcbd0d;
+}
+
 p{	
-	background-color: orange;
+	background-color: #fcbd0d;
 	color: black;
 }
 title{
