--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ title{
 </style>
 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>WAYKE</h1>
+<p></p>
+<footer>Send an email to our <a href="mailto:waykeup.now@gmail.com">Dev Team!</a></footer>
 </body>
 </html>
