--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@ p{
 title{
 	text-align: center;
 }
+footer{
+	background-color: orange;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow:hidden;
+}
 
 </style>
 
