--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@ title{
 	text-align: center;
 }
 footer{
-	background-color: orange;
+	background-color: #fcbd0d;
     position: absolute;
     left: 0;
     bottom: 0;
     height: 100px;
     width: 100%;
     overflow:hidden;
+    text-align: center;
+    font-size: 20;
+    font-family: comic;
 }
 
 </style>
