--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <title>Wayke.up!</title>
 <style type="text/css">
 body{
-	
 	background-image: url("https://i.ytimg.com/vi/2AVqxPAs094/maxresdefault.jpg");
 }
 
@@ -19,12 +18,13 @@ footer{
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 100px;
+    height: 20px;
     width: 100%;
-    overflow:hidden;
+    overflow: hidden;
     text-align: center;
     font-size: 20;
-    font-family: comic;
+    font-family: helvetica;
+    color: white;
 }
 
 </style>
