--- a/index.html
+++ b/index.html
@@ -1,37 +1,81 @@
-<!DOCTYPE html>
+
+<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html>
-<title>Wayke.up!</title>
-<style type="text/css">
-body{
-	background-image: url("https://i.ytimg.com/vi/2AVqxPAs094/maxresdefault.jpg");
-}
-
-p{	
-	background-color: #fcbd0d;
-	color: black;
-}
-title{
-	text-align: center;
-}
-footer{
-	background-color: #fcbd0d;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 20px;
-    width: 100%;
-    overflow: hidden;
-    text-align: center;
-    font-size: 20;
-    font-family: helvetica;
-    color: white;
-}
-
-</style>
-
+<head>
+<title>The Slide Landing Page Website Template | Home :: w3layouts</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+</head>
 <body>
-<h1>WAYKE</h1>
-<p></p>
-<footer>Send an email to our <a href="mailto:waykeup.now@gmail.com">Dev Team!</a></footer>
+	<div class="content">
+
+			<div class="header">
+				<img src="images/wayke-logo.png">
+				<a href="https://github.com/wayke" target="_blank"><img src="images/github-6-xxl.png"></a>
+			</div>
+
+				<div class="clear"> </div>
+				</div>
+				<div class="clear"> </div>
+			</div>
+			</div>
+			<div class="main">
+				<div class="wrap">
+				<div class="main_left">
+					<h2>Stay Awake</h2>
+					<p>Find yourself dozing? Wayke will notify you when to take a break or even help you stay alert in a pinch. We offer an unparalleled solution to lost productivity due to drowsiness. Whether you find yourself driving great distances to attend Hackathons, piloting a Boeing 747, operating a crane, or simply studying for your next midterm, Wayke can help you stay focused.</p>
+
+					<p>Be sure to look out for our planned machine learning backend integration for actionable insights based on your daily activity.</p>		
+					<div class="buttons">
+							<div class="clear"> </div>
+					</div>
+				</div>
+			<div class="main_right">
+						<span><img src="./images/Samsung-Galaxy-S6-website.png"/></span>
+			</div>
+			<div class="clear"> </div>
+			</div>
+		</div>
+	</div>
+		<div class="buttom">
+			<div class="wrap">
+				<div class="top-grids">
+					<div class="top-grid">
+						<img src="images/icon1.png"/>
+						<h3>Designed to keep you alert</h3>
+						<p>Wayke can give you a buzz when you find yourself drifting off. We carefully measure your alpha and beta brainwaves to see when you are losing your focus.</p>
+					</div>
+					<div class="top-grid">
+						 <img src="images/icon2.png"/>
+						<h3>Made with love from a dedicated team</h3>
+						<p>Over the 36 hours we spent working on Wayke we have produced all brainwaves known to exist. It is at QHacks where we made a great hack with great people.</p>
+						</div>
+					<div class="top-grid">
+						<img src="images/icon3.png"/> 
+						<h3>Expertly hacked together</h3>
+						<p>With Muse, Android, Arduinos, Grove, Web, and Cylon.js we have the whole stack. Not to mention some killer graphics, designs, and UI.</p>
+						</div>
+					<div class="clear"> </div>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+   	    <div class="wrap">
+   	    	<div class="footer-left">
+				<div class="copy">
+			       <p>Wayke 2016 &copy;</p>
+		        </div>
+			</div>
+		   <div class="clear"> </div>
+	    </div>
+   </div>
 </body>
 </html>
