--- a/hs_love_team.html
+++ b/hs_love_team.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+<style type="text/css">
+	img{
+		scale: 50%
+	}
+</style>
 <head>
 	<title>Team | Love</title>
 </head>
 <body>
+<h1> The </h1>
 <img src="https://raw.githubusercontent.com/wayke/wayke.github.io/master/images/wayke-logo.png">
 <img src="http://4.bp.blogspot.com/-qIHOBHtBCtE/VdTMqPfdUxI/AAAAAAAAAIw/7DCeb_Lj_J4/s1600/Web.png">
-<p>The hype squad thanks you for yo' time</p>
+<p>thanks you for yo' time</p>
 </body>
 </html>
