--- a/hs_love_team.html
+++ b/hs_love_team.html
@@ -18,6 +18,6 @@ body{
 <h1> The </h1>
 <img src="https://raw.githubusercontent.com/wayke/wayke.github.io/master/images/wayke-logo.png">
 <img src="http://4.bp.blogspot.com/-qIHOBHtBCtE/VdTMqPfdUxI/AAAAAAAAAIw/7DCeb_Lj_J4/s1600/Web.png">
-<p>thanks you for yo' time</p>
+<h1>thanks you for yo' time</h1>
 </body>
 </html>
