--- a/hs_love_team.html
+++ b/hs_love_team.html
@@ -10,6 +10,9 @@ body{
 		width: 50%;
 		height: auto;
 	}
+	p{
+		font-size: 32;
+	}
 </style>
 <head>
 	<title>Team | Love</title>
@@ -19,7 +22,7 @@ body{
 <img src="https://raw.githubusercontent.com/wayke/wayke.github.io/master/images/wayke-logo.png">
 <img src="http://4.bp.blogspot.com/-qIHOBHtBCtE/VdTMqPfdUxI/AAAAAAAAAIw/7DCeb_Lj_J4/s1600/Web.png">
 <p>
-<h2>thanks you for yo' time</h2>
+thanks you for yo' time
 </p>
 </body>
 </html>
