--- a/hs_love_team.html
+++ b/hs_love_team.html
@@ -18,7 +18,7 @@ body{
 	<title>Team | Love</title>
 </head>
 <body>
-<h1> The </h1>
+<p> The </p>
 <img src="https://raw.githubusercontent.com/wayke/wayke.github.io/master/images/wayke-logo.png">
 <img src="http://4.bp.blogspot.com/-qIHOBHtBCtE/VdTMqPfdUxI/AAAAAAAAAIw/7DCeb_Lj_J4/s1600/Web.png">
 <p>
