--- a/hs_love_team.html
+++ b/hs_love_team.html
@@ -9,9 +9,13 @@ body{
 	img{
 		width: 50%;
 		height: auto;
+		margin-left: auto;
+    		margin-right: auto;
+		
 	}
 	p{
 		font-size: 32pt;
+		text-align: center;
 	}
 </style>
 <head>
